--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Brand/Create.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Brand/Create.cshtml
@@ -1,8 +1,8 @@
 ﻿@using NGnono.FinancialManagement.WebSiteCore.Models.Vo
-@model NGnono.FinancialManagement.WebSiteCore.Models.Vo.TagCreateViewModel
+@model NGnono.FinancialManagement.WebSiteCore.Models.Vo.BrandCreateViewModel
 
 @{
-    ViewBag.Title = "添加分类";
+    ViewBag.Title = "添加品牌";
 }
 
 @using (Html.BeginForm())
