--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Brand/Update.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Brand/Update.cshtml
@@ -1,8 +1,8 @@
 ﻿@using NGnono.FinancialManagement.WebSiteCore.Models.Vo
-@model NGnono.FinancialManagement.Data.Models.TagEntity
+@model NGnono.FinancialManagement.Data.Models.BrandEntity
 
 @{
-    ViewBag.Title = "编辑分类";
+    ViewBag.Title = "编辑品牌";
 }
 
 @using (Html.BeginForm())
