--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Store/Create.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Store/Create.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "添加商户";
 }
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Create", "Store", FormMethod.Post, new { id = "form" }))
 {
     @Html.ValidationSummary()
 
@@ -65,6 +65,9 @@
 @section FooterScripts {
 
     <script type="text/javascript">
+
+
+
         var map;
         function getCoordinate() {
             var geolocation = new BMap.Geolocation();
@@ -111,69 +114,91 @@
             $('#r-result2').hide();
             map = new BMap.Map("l-map"); // 创建Map实例
             getCoordinate();
-        }
 
-        function showMap(lng, lat) {
-            //var map = new BMap.Map("l-map");
-            // 创建Map实例
-            var point = new BMap.Point(lng, lat);
-            // 创建点坐标
-            map.centerAndZoom(point, 15);
-            // 初始化地图,设置中心点坐标和地图级别。
-            map.enableScrollWheelZoom();
-            //启用滚轮放大缩小
-
-            map.addEventListener("click", showInfo);
-
-            $('#l-map').listview('refresh');
-        }
-
-        function showMap2() {
-
-            map.centerAndZoom(new BMap.Point(116.404, 39.915), 4);
-
-            var local = new BMap.LocalSearch("全国", {
-                renderOptions: {
-                    map: map,
-                    panel: "r-result2",
-                    autoViewport: true,
-                    selectFirstResult: false
-                }
+            $("#form").submit(function () {
+                $.ajax({
+                    type: "POST",
+                    url: '@Url.Action("Create", "Store")',
+                    data: $(this).serialize(),
+                    dataType: "json",
+                    success: function (data) {
+                        if (data.isSuccessful == true) {
+                            alert("创建成功");
+                            $.mobile.changePage('@Url.Action("Update", "Store")?storeid=' + data.data, { transition: "slideup" });
+                    }
+                    else {
+                        var result = "";
+                        for (var i in data.data) {
+                            result = result + data.data[i] + "\r\n";
+                        }
+                        alert(result);
+                    }
+                },
+                    global: false
+                });
+                return false;
             });
-            map.addEventListener("click", showInfo);
-            local.search("南京路");
-        }
+    }
 
-        function G(id) {
-            return document.getElementById(id);
-        }
+    function showMap(lng, lat) {
+        //var map = new BMap.Map("l-map");
+        // 创建Map实例
+        var point = new BMap.Point(lng, lat);
+        // 创建点坐标
+        map.centerAndZoom(point, 15);
+        // 初始化地图,设置中心点坐标和地图级别。
+        map.enableScrollWheelZoom();
+        //启用滚轮放大缩小
 
-        function setPlace() {
-            map.clearOverlays(); //清除地图上所有覆盖物
+        map.addEventListener("click", showInfo);
+    }
 
-            function myFun() {
-                var pp = local.getResults().getPoi(0).point; //获取第一个智能搜索的结果
-                map.centerAndZoom(pp, 18);
-                map.addOverlay(new BMap.Marker(pp)); //添加标注
+    function showMap2() {
+
+        map.centerAndZoom(new BMap.Point(116.404, 39.915), 4);
+
+        var local = new BMap.LocalSearch("全国", {
+            renderOptions: {
+                map: map,
+                panel: "r-result2",
+                autoViewport: true,
+                selectFirstResult: false
             }
+        });
+        map.addEventListener("click", showInfo);
+        local.search("南京路");
+    }
 
-            var local = new BMap.LocalSearch(map, {
-                //智能搜索
-                onSearchComplete: myFun
-            });
-            local.search(myValue);
+    function G(id) {
+        return document.getElementById(id);
+    }
+
+    function setPlace() {
+        map.clearOverlays(); //清除地图上所有覆盖物
+
+        function myFun() {
+            var pp = local.getResults().getPoi(0).point; //获取第一个智能搜索的结果
+            map.centerAndZoom(pp, 18);
+            map.addOverlay(new BMap.Marker(pp)); //添加标注
         }
 
-        function showInfo(e) {
-            $('#lng').val(e.point.lng);
-            $('#lat').val(e.point.lat);
-            //var map = new BMap.Map("l-map");
-            var marker1 = new BMap.Marker(new BMap.Point(e.point.lng, e.point.lat));  // 创建标注
-            map.addOverlay(marker1);              // 将标注添加到地图中
+        var local = new BMap.LocalSearch(map, {
+            //智能搜索
+            onSearchComplete: myFun
+        });
+        local.search(myValue);
+    }
 
-            $('#zuobiao').val(e.point.lng + ',' + e.point.lat);
-            //alert($('#lng').val + $('#lat').val);
-        }
+    function showInfo(e) {
+        $('#lng').val(e.point.lng);
+        $('#lat').val(e.point.lat);
+        //var map = new BMap.Map("l-map");
+        var marker1 = new BMap.Marker(new BMap.Point(e.point.lng, e.point.lat));  // 创建标注
+        map.addOverlay(marker1);              // 将标注添加到地图中
+
+        $('#zuobiao').val(e.point.lng + ',' + e.point.lat);
+        //alert($('#lng').val + $('#lat').val);
+    }
 
     </script>
 }
