--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Product/Create.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Product/Create.cshtml
@@ -113,7 +113,7 @@
                 success: function (data) {
                     if (data.isSuccessful == true) {
                         alert("创建成功");
-                        $.mobile.changePage('@Url.Action("Update", "Product")?productid=' + data.data, { transition: "slideup" });
+                        $.mobile.changePage('@Url.Action("Update", "Product")?productid=' + data.data, { transition: "slideup" },true,true);
                     }
                     else {
                         var result = "";
