--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Product/MyIndex.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Product/MyIndex.cshtml
@@ -19,11 +19,10 @@
     @foreach (var item in this.Model.Datas)
     {
         <li>
-            <h3><a href="@Url.Action("Details", "Product", new { productid = item.Id })">@item.Name</a></h3>
+            <h3><a href="@Url.Action("Details", "Product", new { productid = item.Id })" data-ajax="false">@item.Name</a></h3>
             <p>@item.Store.Name</p>
             <p>@item.Brand.Name</p>
             <p>@((item.IsShare == null || !item.IsShare.Value) ? "未分享" : "已分享")</p>
-
             @if (item.PriceSettings != null && item.PriceSettings.Count > 0)
             {
                 var s = item.PriceSettings.Where(v => v.Status == (int)DataStatus.Normal).Select(v => new
@@ -42,7 +41,7 @@
                 <p class="ui-li-aside">当前价￥<strong>@s.Price</strong></p>
                 <p class="ui-li-aside">历史最低价￥<strong>@d.Price</strong></p>
             }
-            <p class="ui-li-aside"><a href="@Url.Action("Update", "Product")">编辑</a></p>
+            <p class="ui-li-aside"><a href="@Url.Action("Update", "Product", new { productid = item.Id })" data-ajax="false">编辑</a></p>
         </li>
     }
 </ul>
