--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Product/Create.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Product/Create.cshtml
@@ -227,7 +227,7 @@
 
     <div data-role="page" id="storeSetting">
         <div data-role="header">
-            @Html.ActionLink("编辑", "MyUpdateList", "Store")
+            @Html.ActionLink("编辑", "UpdateList", "Store")
             <h1>商家设置</h1>
             <a href="@Url.Action("Create", "Store")" data-ajax="false">创建</a>
         </div>
