--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Shared/_JqMLayout.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Shared/_JqMLayout.cshtml
@@ -9,10 +9,11 @@
     <link href="@Url.Content("~/css/jqm/themes/default/jquery.mobile-1.3.0.min.css")" rel="stylesheet" type="text/css"/>
     <link href="@Url.Content("~/css/mobiscroll.custom-2.5.0.min.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/css/jquery.mobile.pagination.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/css/jqplot/jquery.jqplot.min.css")" rel="stylesheet" type="text/css" />
 
 
     @RenderSection("HeaderStyles", false)
-    <script src="@Url.Content("~/js/base/jquery.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/js/base/jquery.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/js/widgets/jquery.mobile-1.3.0.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/js/widgets/jquery.validate.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/js/widgets/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
@@ -20,6 +21,7 @@
     <script src="@Url.Content("~/js/widgets/mobiscroll.custom-2.5.0.min.js")" type="text/javascript"></script>
 
     <script src="@Url.Content("~/js/widgets/jquery.mobile.pagination.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/js/widgets/jqplot/jquery.jqplot.min.js")" type="text/javascript"></script>
 
 
     @RenderSection("HeaderScripts", false)
@@ -32,7 +34,7 @@
 
 </head>
 <body>
-    <div data-role="page" id="home" >
+    <div data-role="page" id="home">
         <div data-role="header" id="homeHeader">
             @if (IsSectionDefined("Header"))
             {
