--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Account/Index.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Account/Index.cshtml
@@ -12,5 +12,7 @@
 <ul data-role="listview" data-inset="true">
     <li>@Html.ActionLink("更改密码", "ChangePassword")</li>
     <li>@Html.ActionLink("注销", "LogOff")</li>
+    <li>@Html.ActionLink("记账", "Index", "Bill")</li>
+    <li>@Html.ActionLink("统计", "Chart", "Bill")</li>
     <li>@Html.ActionLink("我的商品", "MyIndex", "Product")</li>
 </ul>
