--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Bill/Chart.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Bill/Chart.cshtml
@@ -2,16 +2,54 @@
 @model NGnono.FinancialManagement.WebSiteCore.Controllers.ChartDto
 @{
     ViewBag.Title = "统计";
+    Layout = null;
 }
 
-@section Header {
-    @Html.Partial("_DefHeaderPartial", new DefHeaderViewModel
-{
-    Title = ViewBag.Title
-})
-}
 
-@using (Html.BeginForm("Chart", "Bill", FormMethod.Get, new { id = "form" }))
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta charset="utf-8" />
+    <title>@ViewBag.Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="@Url.Content("~/css/jqm/themes/default/jquery.mobile-1.3.0.min.css")" rel="stylesheet" type="text/css"/>
+    <link href="@Url.Content("~/css/mobiscroll.custom-2.5.0.min.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/css/jquery.mobile.pagination.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/css/jqplot/jquery.jqplot.min.css")" rel="stylesheet" type="text/css" />
+
+
+    <script src="@Url.Content("~/js/base/jquery.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/js/widgets/jquery.mobile-1.3.0.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/js/widgets/jquery.validate.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/js/widgets/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+
+    <script src="@Url.Content("~/js/widgets/mobiscroll.custom-2.5.0.min.js")" type="text/javascript"></script>
+
+    <script src="@Url.Content("~/js/widgets/jquery.mobile.pagination.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/js/widgets/jqplot/jquery.jqplot.min.js")" type="text/javascript"></script>
+
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+            <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <script src="@Url.Content("~/js/widgets/jqplot/plugins/jqplot.pieRenderer.min.js")" type="text/javascript"></script>
+
+
+
+</head>
+<body>
+    <div data-role="page" id="home">
+        <div data-role="header" id="homeHeader">
+
+            <h1>@ViewBag.Title</h1>
+            @Html.Partial("_LoginPartial")
+
+        </div>
+        <div data-role="content" id="homeContent">
+            @using (Html.BeginForm("Chart", "Bill", FormMethod.Get, new { id = "form" }))
 {
     <ul data-role="listview">
         <li data-role="list-divider">筛选</li>
@@ -19,20 +57,34 @@
         <li>@Html.Hidden("endDate", "", new { @class = "i-txt", id = "endDate" })</li>
         <li data-role="list-divider">统计图</li>
         <li>
-            <div id="chart10" style="margin-top: 20px; margin-left: 20px; width: 100%; height: 350px;"></div>
-        </li>
+            </li>
         <li>
             <input type="submit" value="统计" />
         </li>
     </ul>
 
 }
+             <div id="chart1" class="jqplot-target" style="margin-top: 20px; margin-left: 20px; width: 200px; height: 200px; position: relative;"></div>
+       
+
+        </div>
+
+        <div data-role="footer" id="homeFooter">
+            @Html.Partial("_FooterPartial")
+        </div>
+    </div>
+
+</body>
+</html>
+
+
+
 
 <script type="text/javascript">
     $(document).on('pageinit', pageInit);
 
     function chartSet(data) {
-        var plot2 = jQuery.jqplot('chart10',
+        var plot2 = jQuery.jqplot('chart1',
           data,
           {
               title: '',
@@ -48,11 +100,32 @@
               legend: { show: true, location: 'w' }
           }
       );
+        alert(plot2);
     }
 
     function chartInit() {
-        var data = [];
-        chartSet(data);
+        var data = @Html.Raw(this.Model.PieVal) ; 
+        //chartSet(data);
+
+        alert(1);
+        var plot1 = $.jqplot('chart1', [[['a',25],['b',14],['c',7]]], {
+                gridPadding: {top:0, bottom:38, left:0, right:0},
+                seriesDefaults:{
+                    renderer:$.jqplot.PieRenderer,
+                    trendline:{ show:false },
+                    rendererOptions: { padding: 8, showDataLabels: true }
+                },
+                legend:{
+                    show:true,
+                    placement: 'outside',
+                    rendererOptions: {
+                        numberRows: 1
+                    },
+                    location:'s',
+                    marginTop: '15px'
+                }      
+            });
+ 
     }
 
     function pageInit() {
@@ -103,8 +176,3 @@
     }
 
 </script>
-
-@section HeaderScripts
-{
-    <script src="@Url.Content("~/js/widgets/jqplot/plugins/jqplot.pieRenderer.min.js")" type="text/javascript"></script>
-}
