--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Shared/_JqMLayoutV2.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Shared/_JqMLayoutV2.cshtml
@@ -7,24 +7,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="@Url.Content("~/css/jqm/themes/default/jquery.mobile-1.3.0.min.css")" rel="stylesheet" type="text/css"/>
-    <link href="@Url.Content("~/css/mobiscroll.custom-2.5.0.min.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/css/jqplot/jquery.jqplot.min.css")" rel="stylesheet" type="text/css" />
+
 
     @RenderSection("HeaderStyles", false)
-    <script src="@Url.Content("~/js/base/jquery.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/js/base/jquery.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/js/widgets/jquery.mobile-1.3.0.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/js/widgets/jquery.validate.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/js/widgets/mobiscroll.custom-2.5.0.min.js")" type="text/javascript"></script>
+
+    
+    <script src="@Url.Content("~/js/widgets/jqplot/jquery.jqplot.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/js/widgets/jqplot/plugins/jqplot.pieRenderer.min.js")" type="text/javascript"></script>
+
 
     @RenderSection("HeaderScripts", false)
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
             <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
+    <![endif]-->
+
+
 </head>
 <body>
     <div data-role="page" id="home">
-        <div data-role="header" id="homeHeader">
+@*        <div data-role="header" id="homeHeader">
             @if (IsSectionDefined("Header"))
             {
                 @RenderSection("Header")
@@ -34,12 +40,12 @@
                 <h1>@ViewBag.Title</h1>
                 @Html.Partial("_LoginPartial")
             }
+        </div>*@
+        <div data-role="content" id="homeContent">
+            @RenderBody()
         </div>
 
-        @RenderBody()
-
-
-        <div data-role="footer" id="homeFooter">
+@*        <div data-role="footer" id="homeFooter">
             @if (IsSectionDefined("Footer"))
             {
                 @RenderSection("Footer")
@@ -48,10 +54,12 @@
             {
                 @Html.Partial("_FooterPartial")
             }
-        </div>
+        </div>*@
     </div>
-    @RenderSection("PageAreas", false)
-    @RenderSection("FooterScripts", false)
+ @*   @RenderSection("PageAreas", false)
+    @RenderSection("FooterScripts", false)*@
+
+
 </body>
 </html>
 
