--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Account/Index.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Account/Index.cshtml
@@ -13,6 +13,6 @@
     <li>@Html.ActionLink("更改密码", "ChangePassword")</li>
     <li>@Html.ActionLink("注销", "LogOff")</li>
     <li>@Html.ActionLink("记账", "Index", "Bill")</li>
-    <li>@Html.ActionLink("统计", "Chart", "Bill")</li>
+    <li><a href="@Url.Action("Chart", "Bill")"  data-ajax="false">统计</a></li>
     <li>@Html.ActionLink("我的商品", "MyIndex", "Product")</li>
 </ul>
