--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Product/Details.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Product/Details.cshtml
@@ -21,28 +21,33 @@
     <li data-role="list-divider">分类</li>
     <li>@this.Model.Tag.Name</li>
     <li data-role="list-divider">商家信息</li>
-    <li><a href="#storePage">@this.Model.Store.Name</a></li>
+    <li><a href="#storePageView" data-ajax="false">@this.Model.Store.Name</a></li>
     <li><a href="tel:@this.Model.Store.Tel">@this.Model.Store.Tel</a></li>
 </ul>
 
 @section PageAreas
 {
-    <div data-role="page" id="storePage">
+    <div data-role="page" id="storePageView">
         <div data-role="header">
             @Html.ActionLink("返回", "Index", "Home", null, new { data_icon = "arrow-l", data_rel = "back" })
-            <h1>@this.Model.Store.Name.Substring(0, this.Model.Store.Name.Length > 10 ? 10 : this.Model.Store.Name.Length);
+            <h1>@this.Model.Store.Name.Substring(0, this.Model.Store.Name.Length > 10 ? 10 : this.Model.Store.Name.Length)
             </h1>
         </div>
         <div data-role="content" id="storeContent">
-            <ul data-role="listview" >
+            <ul data-role="listview">
                 <li>@this.Model.Store.Name</li>
-                <li><a href="#storeDetailsPage">
+                <li><a href="#storeDetailsPage" data-ajax="false">
                     <div id="allmap" style="width: 100%; height: 320px"></div>
                 </a></li>
                 <li>@this.Model.Store.Location</li>
                 <li><a href="tel:@this.Model.Store.Tel">@this.Model.Store.Tel</a></li>
                 <li>@this.Model.Store.Description</li>
             </ul>
+        </div>
+        <div data-role="footer" id="homeFooter">
+
+            @Html.Partial("_FooterPartial")
+
         </div>
     </div>
 
@@ -53,7 +58,7 @@
             </h1>
         </div>
         <div data-role="content" id="storeDetailsContent">
-            <ul data-role="listview" >
+            <ul data-role="listview">
                 <li>
                     <div id="dmap" style="width: 100%; height: 320px"></div>
                 </li>
@@ -62,7 +67,7 @@
 
                         <input type="radio" name="type1" id="chb_mode_2" value="2" checked="checked" onclick=" this.checked = true; sdinit()" />
                         <label for="chb_mode_2">驾车</label>
-                        <input type="radio" name="type1" id="chb_mode_1" value="1" onclick="this.checked = true;sdinit()"  />
+                        <input type="radio" name="type1" id="chb_mode_1" value="1" onclick="this.checked = true;sdinit()" />
                         <label for="chb_mode_1">公交</label>
 
 
@@ -76,6 +81,7 @@
     </div>
 }
 
+
 @section HeaderScripts
 {
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=1.5&ak=50bebc60934e9a21caaacc8e24a2bec3"></script>
@@ -85,7 +91,7 @@
 {
     <script type="text/javascript">
 
-        $('#storePage').on("pageinit", sinit);
+        $('#storePageView').on("pageinit", sinit);
 
         function sinit() {
             var map = new BMap.Map("allmap");
